experimental/ir/testdata/options/target.proto.stderr.txt
error: unsupported option target for `range`
   --> testdata/options/target.proto:8:15
    |
  8 | option (file).range = true;
    |               ^^^^^ option set here
  9 | option (file).message = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:9:15
    |
  9 | option (file).message = true;
    |               ^^^^^^^ option set here
 10 | option (file).field = true;
 ...
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:10:15
    |
 10 | option (file).field = true;
    |               ^^^^^ option set here
 11 | option (file).oneof = true;
 ...
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:11:15
    |
 11 | option (file).oneof = true;
    |               ^^^^^ option set here
 12 | option (file).enum = true;
 ...
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:12:15
    |
 12 | option (file).enum = true;
    |               ^^^^ option set here
 13 | option (file).value = true;
 ...
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:13:15
    |
 13 | option (file).value = true;
    |               ^^^^^ option set here
 14 | option (file).service = true;
 ...
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:14:15
    |
 14 | option (file).service = true;
    |               ^^^^^^^ option set here
 15 | option (file).method = true;
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:15:15
    |
 15 | option (file).method = true;
    |               ^^^^^^ option set here
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:18:22
    |
 17 | message M {
    |         - applied to this
 18 |     option (message).file = true;
    |                      ^^^^ option set here
 19 |     option (message).range = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:19:22
    |
 17 | message M {
    |         - applied to this
 18 |     option (message).file = true;
 19 |     option (message).range = true;
    |                      ^^^^^ option set here
 20 |     option (message).message = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `field`
   --> testdata/options/target.proto:21:22
    |
 17 | message M {
    |         - applied to this
 ...
 20 |     option (message).message = true;
 21 |     option (message).field = true;
    |                      ^^^^^ option set here
 22 |     option (message).oneof = true;
 ...
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:22:22
    |
 17 | message M {
    |         - applied to this
 ...
 21 |     option (message).field = true;
 22 |     option (message).oneof = true;
    |                      ^^^^^ option set here
 23 |     option (message).enum = true;
 ...
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:23:22
    |
 17 | message M {
    |         - applied to this
 ...
 22 |     option (message).oneof = true;
 23 |     option (message).enum = true;
    |                      ^^^^ option set here
 24 |     option (message).value = true;
 ...
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:24:22
    |
 17 | message M {
    |         - applied to this
 ...
 23 |     option (message).enum = true;
 24 |     option (message).value = true;
    |                      ^^^^^ option set here
 25 |     option (message).service = true;
 ...
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:25:22
    |
 17 | message M {
    |         - applied to this
 ...
 24 |     option (message).value = true;
 25 |     option (message).service = true;
    |                      ^^^^^^^ option set here
 26 |     option (message).method = true;
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:26:22
    |
 17 | message M {
    |         - applied to this
 ...
 25 |     option (message).service = true;
 26 |     option (message).method = true;
    |                      ^^^^^^ option set here
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:29:9
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 29 |         file: true
    |         ^^^^ option set here
 30 |         range: true
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:30:9
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 29 |         file: true
 30 |         range: true
    |         ^^^^^ option set here
 31 |         message: true, field: true, oneof: true
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:31:9
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 29 |         file: true
 30 |         range: true
 31 |         message: true, field: true, oneof: true
    |         ^^^^^^^ option set here
 32 |         enum: true, value: true
 ...
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:31:37
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 29 |         file: true
 30 |         range: true
 31 |         message: true, field: true, oneof: true
    |                                     ^^^^^ option set here
 32 |         enum: true, value: true
 ...
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:32:9
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 31 |         message: true, field: true, oneof: true
 32 |         enum: true, value: true
    |         ^^^^ option set here
 33 |         service: true, method: true
 ...
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:32:21
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 31 |         message: true, field: true, oneof: true
 32 |         enum: true, value: true
    |                     ^^^^^ option set here
 33 |         service: true, method: true
 ...
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:33:9
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 32 |         enum: true, value: true
 33 |         service: true, method: true
    |         ^^^^^^^ option set here
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:33:24
    |
 28 |     optional int32 x = 1 [(field) = {
    |                    - applied to this
 ...
 32 |         enum: true, value: true
 33 |         service: true, method: true
    |                        ^^^^^^ option set here
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:45:24
    |
 44 |     oneof y {
    |           - applied to this
 45 |         option (oneof).file = true;
    |                        ^^^^ option set here
 46 |         option (oneof).range = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:46:24
    |
 44 |     oneof y {
    |           - applied to this
 45 |         option (oneof).file = true;
 46 |         option (oneof).range = true;
    |                        ^^^^^ option set here
 47 |         option (oneof).message = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:47:24
    |
 44 |     oneof y {
    |           - applied to this
 45 |         option (oneof).file = true;
 46 |         option (oneof).range = true;
 47 |         option (oneof).message = true;
    |                        ^^^^^^^ option set here
 48 |         option (oneof).field = true;
 ...
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:48:24
    |
 44 |     oneof y {
    |           - applied to this
 ...
 47 |         option (oneof).message = true;
 48 |         option (oneof).field = true;
    |                        ^^^^^ option set here
 49 |         option (oneof).oneof = true;
 ...
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `enum`
   --> testdata/options/target.proto:50:24
    |
 44 |     oneof y {
    |           - applied to this
 ...
 49 |         option (oneof).oneof = true;
 50 |         option (oneof).enum = true;
    |                        ^^^^ option set here
 51 |         option (oneof).value = true;
 ...
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:51:24
    |
 44 |     oneof y {
    |           - applied to this
 ...
 50 |         option (oneof).enum = true;
 51 |         option (oneof).value = true;
    |                        ^^^^^ option set here
 52 |         option (oneof).service = true;
 ...
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:52:24
    |
 44 |     oneof y {
    |           - applied to this
 ...
 51 |         option (oneof).value = true;
 52 |         option (oneof).service = true;
    |                        ^^^^^^^ option set here
 53 |         option (oneof).method = true;
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:53:24
    |
 44 |     oneof y {
    |           - applied to this
 ...
 52 |         option (oneof).service = true;
 53 |         option (oneof).method = true;
    |                        ^^^^^^ option set here
 54 |         int32 z = 3;
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:59:19
    |
 58 | enum E {
    |      - applied to this
 59 |     option (enum).file = true;
    |                   ^^^^ option set here
 60 |     option (enum).range = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:60:19
    |
 58 | enum E {
    |      - applied to this
 59 |     option (enum).file = true;
 60 |     option (enum).range = true;
    |                   ^^^^^ option set here
 61 |     option (enum).message = true;
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:61:19
    |
 58 | enum E {
    |      - applied to this
 59 |     option (enum).file = true;
 60 |     option (enum).range = true;
 61 |     option (enum).message = true;
    |                   ^^^^^^^ option set here
 62 |     option (enum).field = true;
 ...
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:62:19
    |
 58 | enum E {
    |      - applied to this
 ...
 61 |     option (enum).message = true;
 62 |     option (enum).field = true;
    |                   ^^^^^ option set here
 63 |     option (enum).oneof = true;
 ...
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:63:19
    |
 58 | enum E {
    |      - applied to this
 ...
 62 |     option (enum).field = true;
 63 |     option (enum).oneof = true;
    |                   ^^^^^ option set here
 64 |     option (enum).enum = true;
 ...
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `value`
   --> testdata/options/target.proto:65:19
    |
 58 | enum E {
    |      - applied to this
 ...
 64 |     option (enum).enum = true;
 65 |     option (enum).value = true;
    |                   ^^^^^ option set here
 66 |     option (enum).service = true;
 ...
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
    |                                        ----------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.value` is constrained to enum values

error: unsupported option target for `service`
   --> testdata/options/target.proto:66:19
    |
 58 | enum E {
    |      - applied to this
 ...
 65 |     option (enum).value = true;
 66 |     option (enum).service = true;
    |                   ^^^^^^^ option set here
 67 |     option (enum).method = true;
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:67:19
    |
 58 | enum E {
    |      - applied to this
 ...
 66 |     option (enum).service = true;
 67 |     option (enum).method = true;
    |                   ^^^^^^ option set here
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

error: unsupported option target for `file`
   --> testdata/options/target.proto:70:9
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 70 |         file: true
    |         ^^^^ option set here
 71 |         range: true
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.file` is constrained to file scopes

error: unsupported option target for `range`
   --> testdata/options/target.proto:71:9
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 70 |         file: true
 71 |         range: true
    |         ^^^^^ option set here
 72 |         message: true, field: true, oneof: true
 ...
103 |     optional bool file = 1 [targets = TARGET_TYPE_FILE];
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
    |                                        ---------------------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.range` is constrained to extension ranges

error: unsupported option target for `message`
   --> testdata/options/target.proto:72:9
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 70 |         file: true
 71 |         range: true
 72 |         message: true, field: true, oneof: true
    |         ^^^^^^^ option set here
 73 |         enum: true, value: true
 ...
104 |     optional bool range = 2 [targets = TARGET_TYPE_EXTENSION_RANGE];
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.message` is constrained to message definitions

error: unsupported option target for `field`
   --> testdata/options/target.proto:72:24
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 70 |         file: true
 71 |         range: true
 72 |         message: true, field: true, oneof: true
    |                        ^^^^^ option set here
 73 |         enum: true, value: true
 ...
105 |     optional bool message = 3 [targets = TARGET_TYPE_MESSAGE];
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.field` is constrained to message fields

error: unsupported option target for `oneof`
   --> testdata/options/target.proto:72:37
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 70 |         file: true
 71 |         range: true
 72 |         message: true, field: true, oneof: true
    |                                     ^^^^^ option set here
 73 |         enum: true, value: true
 ...
106 |     optional bool field = 4 [targets = TARGET_TYPE_FIELD];
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
    |                                        -----------------
    |                                         |
    |                                         targets constrained here
    |
    = help: `buf.test.Targets.oneof` is constrained to oneof definitions

error: unsupported option target for `enum`
   --> testdata/options/target.proto:73:9
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 ...
 72 |         message: true, field: true, oneof: true
 73 |         enum: true, value: true
    |         ^^^^ option set here
 74 |         service: true, method: true
 ...
107 |     optional bool oneof = 5 [targets = TARGET_TYPE_ONEOF];
108 |     optional bool enum = 6 [targets = TARGET_TYPE_ENUM];
    |                                       ----------------
    |                                        |
    |                                        targets constrained here
    |
    = help: `buf.test.Targets.enum` is constrained to enum definitions

error: unsupported option target for `service`
   --> testdata/options/target.proto:74:9
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 ...
 73 |         enum: true, value: true
 74 |         service: true, method: true
    |         ^^^^^^^ option set here
 ...
109 |     optional bool value = 7 [targets = TARGET_TYPE_ENUM_ENTRY]; // Why is it called this.
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
    |                                          -------------------
    |                                           |
    |                                           targets constrained here
    |
    = help: `buf.test.Targets.service` is constrained to service definitions

error: unsupported option target for `method`
   --> testdata/options/target.proto:74:24
    |
 69 |     X = 1 [(value) = {
    |     - applied to this
 ...
 73 |         enum: true, value: true
 74 |         service: true, method: true
    |                        ^^^^^^ option set here
 ...
110 |     optional bool service = 8 [targets = TARGET_TYPE_SERVICE];
111 |     optional bool method = 9 [targets = TARGET_TYPE_METHOD];
    |                                         ------------------
    |                                          |
    |                                          targets constrained here
    |
    = help: `buf.test.Targets.method` is constrained to service methods

encountered 48 errors
